--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,8 @@
             <li><strong>Many-to-Many:</strong> Students are enrolled in Courses through Enrollments.</li>
             <li><strong>One-to-One:</strong> Each Student has a Student Profile.</li>
             <li><strong>One-to-One:</strong> Each Teacher has a Teacher Profile.</li>
-            <li><strong>One-to-One:</strong> Teachers are allocated to Courses.</li>
+            <li><strong>One-to-many:</strong> A Teacher is allocated to Courses.</li>
+            <li><strong>One-to-many:</strong> A students has grades.</li>
         </ul>
     </div>
 </body>
